feat(select component dropdown): add check icon for selected options (#244)

--- a/app/assets/stylesheets/src/shared/_components.scss
+++ b/app/assets/stylesheets/src/shared/_components.scss
@@ -171,6 +171,7 @@
     --select_component_font_size: 12px;
     --select_component_min_height: 28px;
     --select_component_chevron_size: 0.4em;
+    --select_component_check_size: 0.7em;
 
     .selectize-input {
       min-height: var(--select_component_min_height) !important;
@@ -183,6 +184,7 @@
     --select_component_font_size: 14px;
     --select_component_min_height: 32px;
     --select_component_chevron_size: 0.5em;
+    --select_component_check_size: 0.8em;
 
     .selectize-input {
       min-height: var(--select_component_min_height) !important;
@@ -195,6 +197,7 @@
     --select_component_font_size: 16px;
     --select_component_min_height: 40px;
     --select_component_chevron_size: 0.7em;
+    --select_component_check_size: 0.9em;
 
     .selectize-input {
       min-height: var(--select_component_min_height) !important;
@@ -237,6 +240,22 @@
       &:not(:first-child):before {
         content: ", ";
       }
+    }
+
+    // Check icon for selected options.
+    .selected:after {
+      content: "";
+      left: 100%;
+      position: sticky;
+      display: inline-block;
+
+      border-bottom-style: var(--tblr-border-style);
+      border-left-style: var(--tblr-border-style);
+      transform: rotate(-45deg) translateY(-50%);
+      border-width: 1px;
+
+      width: var(--select_component_check_size);
+      height: calc(var(--select_component_check_size) / 1.7);
     }
   }
 
