--- a/app/assets/stylesheets/src/ats/_quick_search.scss
+++ b/app/assets/stylesheets/src/ats/_quick_search.scss
@@ -55,4 +55,12 @@
       }
     }
   }
+
+  kbd {
+    height: 20px;
+
+    @include media-breakpoint-down(lg) {
+      display: none;
+    }
+  }
 }
