feat(core): add logic to compose and send email (#263)

--- a/app/assets/stylesheets/entrypoints/ats.scss
+++ b/app/assets/stylesheets/entrypoints/ats.scss
@@ -21,6 +21,7 @@ $font-family-sans-serif: "Open Sans", Arial, Helvetica, sans-serif;
 
 @import "../src/ats/main";
 @import "../src/ats/positions";
+@import "../src/ats/candidate";
 @import "../src/ats/task";
 @import "../src/ats/quick_search";
 @import "../src/shared/recaptcha";
