--- a/app/views/settings/shared/_tabs.html.slim
+++ b/app/views/settings/shared/_tabs.html.slim
@@ -5,7 +5,7 @@ ruby:
     career_site: t("settings.company.career_site"),
     disqualify_reasons: t("settings.recruitment.disqualify_reasons"),
     email_templates: t("settings.recruitment.email_templates"),
-    general: t("settings.company.general"),
+    general: t("settings.company.general.title"),
     profile: t("settings.person.profile.show.title"),
     sources: t("settings.recruitment.sources")
   }
