feat: implementation of sources page on Admin Interface (#273)
Co-authored-by: wrmk <elmakan@gmail.com>

--- a/app/assets/stylesheets/src/ats/_main.scss
+++ b/app/assets/stylesheets/src/ats/_main.scss
@@ -49,3 +49,8 @@ tr {
   margin-left: 1.25rem;
   margin-right: 1.25rem;
 }
+
+.full-width-without-trashbox {
+  width: 100%;
+  padding-right: 40px;
+}
