--- a/app/views/settings/shared/_tabs.html.slim
+++ b/app/views/settings/shared/_tabs.html.slim
@@ -7,7 +7,7 @@ ruby:
     email_templates: t("settings.recruitment.email_templates.index.title"),
     general: t("settings.company.general.title"),
     profile: t("settings.person.profile.show.title"),
-    sources: t("settings.recruitment.sources")
+    sources: t("settings.recruitment.sources.show.title")
   }
 
 .col.d-md-none.dropdown.w-100.mobile-nav.mx-3-5.py-3
