fix: styles on personal page on admin interface (#306)

--- a/app/assets/stylesheets/src/ats/_settings.scss
+++ b/app/assets/stylesheets/src/ats/_settings.scss
@@ -1,4 +1,9 @@
 #settings {
+  .col-form-label-sm {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
   .edit_email_template {
     .placeholders-label {
       .label-component-small {
