--- a/app/views/settings/shared/_tabs.html.slim
+++ b/app/views/settings/shared/_tabs.html.slim
@@ -60,7 +60,7 @@ ruby:
           = link_to tab_labels[:disqualify_reasons], settings_recruitment_disqualify_reasons_path,
                     class: "dropdown-item #{'active' if active_tab == :disqualify_reasons}"
 
-hr.my-0
+hr.my-0.d-md-none
 
 .col-12.col-md-3.border-end.d-none.d-md-flex
   .card-body
