--- a/app/assets/stylesheets/src/ats/_settings.scss
+++ b/app/assets/stylesheets/src/ats/_settings.scss
@@ -4,8 +4,8 @@
     padding-bottom: 0;
   }
 
-  .edit_email_template {
-    .placeholders-label {
+  .email-template-placeholders {
+    .form-label {
       .label-component-small {
         padding-bottom: 0;
       }
@@ -15,6 +15,10 @@
         padding-top: 0;
         padding-bottom: 0;
       }
+    }
+
+    ul {
+      margin-bottom: 0;
     }
   }
 }
