--- a/app/views/settings/recruitment/email_templates/show.html.slim
+++ b/app/views/settings/recruitment/email_templates/show.html.slim
@@ -1,8 +1,7 @@
-- locales = t("settings.recruitment.email_templates.edit")
-- ats_title(locales[:tab_title])
+- ats_title(t("settings.recruitment.email_templates.edit.tab_title"))
 
 #settings.card
   .row.g-0
     = render "settings/shared/tabs", active_tab: @active_tab
     .col-12.col-md-9.flex-column.card-body
-      = render "form", email_template: @email_template, locales:
+      = render "form", email_template: @email_template
