--- a/app/views/ats/email_messages/_email_compose_form.html.slim
+++ b/app/views/ats/email_messages/_email_compose_form.html.slim
@@ -77,7 +77,7 @@ ruby:
                         controller: "input-utils" \
                       }
 
-    .card-footer.bg-transparent.px-3
+    .card-footer.bg-transparent
       = render ButtonComponent.new( \
                  tooltip_options: { bs_title: "Ctrl + Enter" },
                  data: { enter_turbo_submit_target: "shortcut" } \
