fix(ui): Fix focus issue: clicking on label should focus user_name and company name fields like in Edit email template page (#330)

--- a/app/views/settings/company/general_profiles/_company_name.html.slim
+++ b/app/views/settings/company/general_profiles/_company_name.html.slim
@@ -8,7 +8,7 @@
               class: "vstack" do |form|
 
     = render LabeledComponent.new(left_layout_class: "col-12 form-label", right_layout_class: "col-12") do |c|
-      - c.with_label t("settings.company.general.show.full_name_input_label"), for_field: :full_name
+      - c.with_label t("settings.company.general.show.full_name_input_label"), for_field: :tenant_name
       = render TextInputComponent.new(form,
                                       method: :name,
                                       required: true,
