--- a/app/views/settings/personal/profiles/_account_info.html.slim
+++ b/app/views/settings/personal/profiles/_account_info.html.slim
@@ -7,7 +7,7 @@
             class: "vstack" do |form|
 
   = render LabeledComponent.new(left_layout_class: "col-12 form-label", right_layout_class: "col-12") do |c|
-    - c.with_label t("settings.person.profile.full_name_input_label"), for_field: :full_name
+    - c.with_label t("settings.person.profile.full_name_input_label"), for_field: :account_name
     = render TextInputComponent.new(form,
                                     method: :name,
                                     size: :small,
